# speechify-client

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: access_token.py  basic_usage.py  context_manager.py  list_voices.py  tts_play.py
speechify_client/: __init__.py  client.py  exceptions.py  models.py
tests/: __init__.py  test_client.py  test_models.py
